@@ -1,48 +1,55 @@
 package Tracker.Infrastructure.HttpServer.Parsing.Parsing.Actions;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-
 import Tracker.Infrastructure.HttpServer.Parsing.Parsing.Token;
 import Tracker.Infrastructure.HttpServer.Parsing.Parsing.TokenIdentifier;
 
-public class H_Action implements Action {
+import java.util.ArrayList;
+import java.util.List;
+
+public class H_Action implements Action
+{
     boolean done = false;
     String fieldName = null;
 
-    private H_Action() {} 
+    private H_Action() {}
+
+    public static Action generate()
+    {
+        return new H_Action();
+    }
+
+    public static ActionBuilder<H_Action> getBuilder()
+    {
+        return new ActionBuilder<>(H_Action::new);
+    }
 
     @Override
-    public boolean isDone() {
+    public boolean isDone()
+    {
         return done;
     }
 
     @Override
-    public void act(Token token) {
-        if (token.getIdentifier().equals(TokenIdentifier.CRLF)) {
+    public void act(Token token)
+    {
+        if (token.identifier().equals(TokenIdentifier.CRLF))
+        {
+            done = true;
+        } else if (token.identifier().equals(TokenIdentifier.WORD))
+        {
+            fieldName = token.lexeme();
             done = true;
         }
-
-        else if (token.getIdentifier().equals(TokenIdentifier.WORD)) {
-            fieldName = token.getLexeme();
-            done = true;
-        }    
     }
 
     @Override
-    public ArrayList<String> collect() {
-        if (fieldName != null) { 
-            return new ArrayList<String>(Arrays.asList(fieldName));
+    public ArrayList<String> collect()
+    {
+        if (fieldName != null)
+        {
+            return new ArrayList<>(List.of(fieldName));
         }
         return null;
     }
 
-    public static Action generate() {
-        return new H_Action();
-    }
-
-    public static ActionBuilder<H_Action> getBuilder() {
-        return new ActionBuilder<H_Action>(H_Action::new);
-    }
-    
 }
